--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,26 @@
 
 <html>
   <head>
-    <title>{% block title %}{% endblock title %}</title>
+    <title>{% block title %}Poll COVID{% endblock title %}</title>
+    <script
+      src="https://kit.fontawesome.com/4531fda782.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link
+      rel="shortcut icon"
+      href="https://cdn.glitch.com/c7cf1d55-e3f0-4ad1-88bd-e752316f85bf%2Fcovid-white.png?v=1606499331563"
+      type="image/png"
+    />
     <meta property="og:title" content="Poll COVID" />
     <meta
       property="og:image"
-      content="https://th.bing.com/th/id/OIP.Qug33xROcPmz5YGyE08cvwHaEK?w=277&h=180&c=7&o=5&pid=1.7"
+      content="https://cdn.glitch.com/c7cf1d55-e3f0-4ad1-88bd-e752316f85bf%2Fcovid-white.png?v=1606499331563"
     />
     <meta
       property="og:description"
@@ -22,21 +31,12 @@
       name="description"
       content="Do you ever wonder if Coronavirus will ever end? Well, we don't know yet. Hopefully it will but in the meantime, we should use as many safety measures available right now as we can. That's why we are here, to provide you with honest feedback polled from other users like you! We will provide you with the safest places to go to during these times and the most dangerous places. You can recieve or give feedback on various stores around the globe. Enjoy!"
     />
-
-    <style>
-      {
-      	% block css %
-      }
-
-      	{
-      	% endblock css %
-      }
-    </style>
+    {% block css %} {% endblock css %}
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">PollCOVID</a>
+  <body style="background-image: url('https://cdn.glitch.com/c7cf1d55-e3f0-4ad1-88bd-e752316f85bf%2Fcovid-white-opacity.png?v=1606778996705'); background-position: center; background-size: cover;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">PollCOVID</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -57,15 +57,41 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/submit">Submit an Evaluation</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/view">View Evaluations</a>
+            <a class="nav-link" href="/search">Find Places</a>
           </li>
         </ul>
       </div>
     </nav>
-    {% block content %}{% endblock content %}
+    <div class="container-lg">
+    {% for msg in get_flashed_messages() %}
+      {% if msg[0] == "0" %}
+      <div class="alert alert-success" role="alert">
+        {{msg[1:]}}
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% else %}
+      <div class="alert alert-danger" role="alert">
+        {{msg[1:]}}
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endif %}
+      {% endfor %} 
+      {% block content %}{% endblock content %}
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
