--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %} {% block title %}{% endblock title %} {% block css
 %}{% endblock css %} {% block content %}
-<h1>Poll COVID</h1>
-<p>
-  Do you ever wonder if Coronavirus will ever end? Well, we don't know yet.
-  Hopefully it will but in the meantime, we should use as many safety measures
-  available right now as we can. That's why we are here, to provide you with
-  honest feedback polled from other users like you! We will provide you with the
-  safest places to go to during these times and the most dangerous places. 
-  You can recieve or give feedback on various stores around the globe. Enjoy!
-</p>
+<center>
+  <img
+    src="https://cdn.glitch.com/c7cf1d55-e3f0-4ad1-88bd-e752316f85bf%2FpollCOVID.gif?v=1606778729441"
+  />
+</center>
+<br />
+<div class="card">
+  <div class="card-body">
+    <p>
+      Do you ever wonder if Coronavirus will ever end? Well, we don't know yet.
+      Hopefully it will but in the meantime, we should use as many safety
+      measures available right now as we can. That's why we are here, to provide
+      you with honest feedback polled from other users like you! We will provide
+      you with the safest places to go to during these times and the most
+      dangerous places. You can recieve or give feedback on various stores
+      around the globe. Enjoy!
+    </p>
+  </div>
+</div>
 {% endblock content %} {% block script %} {% endblock script %}
